initialization_DPP_26072025_2128