@@ -4,9 +4,19 @@ import gr.uoi.dit.master2025.gkouvas.dpp.dto.DeviceDto;
 import gr.uoi.dit.master2025.gkouvas.dpp.entity.Building;
 import gr.uoi.dit.master2025.gkouvas.dpp.entity.Device;
 import gr.uoi.dit.master2025.gkouvas.dpp.exception.ResourceNotFoundException;
+import gr.uoi.dit.master2025.gkouvas.dpp.util.QRGenerator;
 import gr.uoi.dit.master2025.gkouvas.dpp.repository.BuildingRepository;
 import gr.uoi.dit.master2025.gkouvas.dpp.repository.DeviceRepository;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -26,85 +36,74 @@ public class DeviceService {
         this.buildingRepository = buildingRepository;
     }
 
-    /**
-     * Retrieves all devices.
-     *
-     * @return list of DeviceDto
-     */
     public List<DeviceDto> getAllDevices() {
         return deviceRepository.findAll()
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Retrieves a device by ID.
-     *
-     * @param id device ID
-     * @return DeviceDto
-     */
     public DeviceDto getDeviceById(Long id) {
         Device device = deviceRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Device not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Δεν βρέθηκε συσκευή: " + id));
         return toDto(device);
     }
 
-    /**
-     * Creates a new device.
-     *
-     * @param dto device data
-     * @return saved DeviceDto
-     */
     public DeviceDto createDevice(DeviceDto dto) {
+        Device d = new Device();
+        d.setName(dto.getName());
+        d.setType(dto.getType());
+        d.setSerialNumber(dto.getSerialNumber());
+        d.setInstallationDate(dto.getInstallationDate());
+        d.setFirmwareVersion(dto.getFirmwareVersion());
+        d.setStatus(dto.getStatus());
+        d.setBuilding(buildingRepository.findById(dto.getBuildingId()).orElseThrow());
 
-        Device device = new Device();
-        device.setName(dto.getName());
-        device.setType(dto.getType());
-        device.setSerialNumber(dto.getSerialNumber());
-        device.setInstallationDate(dto.getInstallationDate());
-        device.setFirmwareVersion(dto.getFirmwareVersion());
-        device.setStatus(dto.getStatus());
-
-        if (dto.getBuildingId() != null) {
-            Building building = buildingRepository.findById(dto.getBuildingId())
-                    .orElseThrow(() -> new ResourceNotFoundException(
-                            "Building not found with id: " + dto.getBuildingId()));
-            device.setBuilding(building);
-        }
-
-        Device saved = deviceRepository.save(device);
+        Device saved = deviceRepository.save(d);
         return toDto(saved);
     }
 
-    /**
-     * Deletes a device by ID.
-     *
-     * @param id device ID
-     */
     public void deleteDevice(Long id) {
         if (!deviceRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Device not found with id: " + id);
+            throw new ResourceNotFoundException("Δεν βρέθηκε συσκευή: " + id);
         }
         deviceRepository.deleteById(id);
     }
 
-    /**
-     * Maps Device entity to DeviceDto.
-     */
+    public List<DeviceDto> getDevicesByBuilding(Long buildingId) {
+        return deviceRepository.findByBuildingId(buildingId)
+                .stream()
+                .map(DeviceDto::new)
+                .toList();
+    }
+
     private DeviceDto toDto(Device device) {
-        DeviceDto dto = new DeviceDto();
-        dto.setDeviceId(device.getDeviceId());
-        dto.setName(device.getName());
-        dto.setType(device.getType());
-        dto.setSerialNumber(device.getSerialNumber());
-        dto.setInstallationDate(device.getInstallationDate());
-        dto.setFirmwareVersion(device.getFirmwareVersion());
-        dto.setStatus(device.getStatus());
-        if (device.getBuilding() != null) {
-            dto.setBuildingId(device.getBuilding().getId());
-        }
+        DeviceDto dto = new DeviceDto(device);
         return dto;
     }
+
+    public DeviceDto updateDevice(Long id, DeviceDto dto) {
+
+        Device d = deviceRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Δεν βρέθηκε συσκευή: " + id));
+
+        d.setName(dto.getName());
+        d.setType(dto.getType());
+        d.setSerialNumber(dto.getSerialNumber());
+        d.setFirmwareVersion(dto.getFirmwareVersion());
+        d.setInstallationDate(dto.getInstallationDate());
+        d.setStatus(dto.getStatus());
+
+        // buildingId προαιρετικά
+        if (dto.getBuildingId() != null) {
+            Building b = buildingRepository.findById(dto.getBuildingId())
+                    .orElseThrow();
+            d.setBuilding(b);
+        }
+
+        Device saved = deviceRepository.save(d);
+
+        return new DeviceDto(saved);
+    }
+
 }
